# py-gptscript

./: .gitignore  README.md  lock.txt  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: dispatch.yaml  pull_request.yaml  push_main.yaml  release.yaml  run_tests.yaml  test.yaml
examples/: run.py
gptscript/: __init__.py  command.py  confirm.py  credentials.py  daemon.py  datasets.py  exec_utils.py  fileinfo.py  frame.py  gptscript.py  install.py  openai.py  opts.py  prompt.py  run.py  text.py  tool.py
scripts/: package  test
tests/: test_gptscript.py  tox.ini
tests/fixtures/: acorn-labs-context.gpt  chat.gpt  credential-override-windows.gpt  credential-override.gpt  global-tools.gpt  parse-with-metadata.gpt  test.gpt
