[build-system]
requires = ["setuptools>=40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gptscript"
version = "0.9.6"
description = "Run gptscripts from Python apps"
readme = "README.md"
authors = [{ name = "Bill Maxwell", email = "bill@acorn.io" }]
license = { file = "LICENSE" }
dependencies = [
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "httpx==0.27.0",
    "idna==3.7",
    "requests==2.32.2",
    "tqdm==4.66.3",
    "urllib3==2.2.2",
    "pydantic==2.9.2",
    "pywin32==306 ; sys_platform == 'win32'",
    "uvicorn==0.34.0",
]

[project.urls]
"Homepage" = "https://github.com/gptscript-ai/py-gptscript/"
"Issues" = "https://github.com/gptscript-ai/py-gptscript/issues"
"Repository" = "https://github.com/gptscript-ai/py-gptscript.git"

[project.scripts]
install_gptscript = "gptscript.install:install"

[tool.wheel]

[tool.setuptools]
packages = ["gptscript"]
